[package]
name = "web-view-linux-test"
version = "0.1.0"
authors = ["Robert Masen <r.f.masen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = { git = "https://github.com/FreeMasen/web-view", branch = "graceful_exit" }